@@ -486,7 +486,7 @@ namespace libtorrent
 				peer_log(">>> SET_TOS[ tos: %d e: %s ]", m_ses.settings().peer_tos, ec.message().c_str());
 #endif
 			}
-#if TORRENT_USE_IPV6
+#if TORRENT_USE_IPV6 && defined IPV6_TCLASS
 			else if (m_remote.address().is_v6() && m_ses.settings().peer_tos != 0)
 			{
 				m_socket->set_option(traffic_class(m_ses.settings().peer_tos), ec);
@@ -5597,7 +5597,7 @@ namespace libtorrent
 			peer_log(">>> SET_TOS[ tos: %d e: %s ]", m_ses.settings().peer_tos, ec.message().c_str());
 #endif
 		}
-#if TORRENT_USE_IPV6
+#if TORRENT_USE_IPV6 && defined IPV6_TCLASS
 		else if (m_remote.address().is_v6() && m_ses.settings().peer_tos != 0)
 		{
 			m_socket->set_option(traffic_class(m_ses.settings().peer_tos), ec);
