@@ -1972,7 +1972,7 @@ namespace aux {
 		{
 			error_code ec;
 
-#if TORRENT_USE_IPV6
+#if TORRENT_USE_IPV6 && defined IPV6_TCLASS
 			if (m_udp_socket.local_endpoint(ec).address().is_v6())
 				m_udp_socket.set_option(traffic_class(s.peer_tos), ec);
 			else
@@ -2397,7 +2397,7 @@ retry:
 
 		if (m_settings.peer_tos != 0) {
 
-#if TORRENT_USE_IPV6
+#if TORRENT_USE_IPV6 && defined IPV6_TCLASS
 			if (m_udp_socket.local_endpoint(ec).address().is_v6())
 				m_udp_socket.set_option(traffic_class(m_settings.peer_tos), ec);
 			else
